# prism-query

./: .gitignore  README.md
deploy/: gen-dev-certs.sh  run-sf100.sh  setup-ec2.sh  worker.toml.example
docker/: Dockerfile.coordinator  Dockerfile.worker  docker-compose.yml
docker/etc/: event-listener.properties.example  jvm.config  node.properties  ranger-access-control.properties
docs/: architecture-overview.md  architecture.md  deployment.md  join-distributed-path-fix.md  join-query-bottleneck.md  osi-integration.md  production-plan.md  production-roadmap.md  substrait-mapping.md  wave-status.md
native/: Cargo.toml
native/prism-bench/: Cargo.toml
native/prism-bench/src/: config.rs  datagen.rs  handler.rs  main.rs  queries.rs
native/prism-executor/: Cargo.toml
native/prism-executor/benches/: concurrent.rs  operators.rs  scaling.rs  string_workload.rs  substrait_roundtrip.rs  tpcds.rs  tpch.rs
native/prism-executor/src/: error.rs  filter_project.rs  hash_aggregate.rs  hash_join.rs  lib.rs  object_source.rs  parquet_scan.rs  sort.rs  string_ops.rs
native/prism-executor/tests/: integration.rs
native/prism-flight/: Cargo.toml
native/prism-flight/benches/: shuffle.rs
native/prism-flight/src/: lib.rs  shuffle_reader.rs  shuffle_writer.rs  tls.rs
native/prism-flight/tests/: tls_integration.rs
native/prism-jni/: Cargo.toml
native/prism-jni/src/: lib.rs
native/prism-osi/: Cargo.toml
native/prism-osi/src/: catalog.rs  lib.rs  model.rs
native/prism-substrait/: Cargo.toml
native/prism-substrait/src/: consumer.rs  error.rs  executor.rs  lib.rs  plan.rs  plan_opt.rs
osi-models/: ecommerce.osi.yaml
proto/prism/: execution.proto
trino-bench/: BENCHMARK-REPORT.md  benchmark-databricks.py  benchmark-extended.py  benchmark-parquet.py  benchmark-prism.py  benchmark-sf10.py  benchmark-sf100.py  benchmark.py  generate_report.py  results-all-benchmarks.json  results-databricks.json  results-extended.json  results-prism-vs-trino.json  results-rest.json  results-sf10.json  run-benchmark-rest.sh  run-benchmark.sh  run-join-only.py
trino/prism-bridge/: dependency-reduced-pom.xml  pom.xml
trino/prism-bridge/src/main/java/io/prism/bridge/: BenchmarkCoordinator.java  PrismErrorMapper.java  PrismExecutionException.java  PrismFlightExecutor.java  PrismNativeExecutor.java  SubstraitSerializer.java
trino/prism-bridge/src/main/java/io/prism/plugin/: ArrowPageConverter.java  PrismColumnHandle.java  PrismConnector.java  PrismConnectorFactory.java  PrismMetadata.java  PrismPageSource.java  PrismPageSourceProvider.java  PrismPlanNode.java  PrismPlugin.java  PrismSessionProperties.java  PrismSplit.java  PrismSplitManager.java  PrismTableHandle.java  PrismTransactionHandle.java
trino/prism-bridge/src/main/java/io/prism/plugin/events/: PrismEventListener.java  PrismEventListenerFactory.java  PrismQueryStats.java  PrismQueryStatsRegistry.java
trino/prism-bridge/src/test/java/io/prism/bridge/: DistributedAggregateE2ETest.java  PrismErrorMapperTest.java  PrismFlightExecutorTest.java  SubstraitSerializerErrorTest.java
trino/prism-bridge/src/test/java/io/prism/plugin/: PrismConnectorFactoryTlsTest.java  PrismMetadataAccelerationDisabledTest.java  PrismMetadataProjectionTest.java  PrismPageSourceProtocolTest.java  PrismSessionPropertiesTest.java  TestSession.java
trino/prism-bridge/src/test/java/io/prism/plugin/events/: PrismEventListenerTest.java
trino/prism-exchange/: pom.xml
trino/prism-exchange/src/main/java/io/prism/exchange/: PrismExchange.java  PrismExchangeConfig.java  PrismExchangeManager.java  PrismExchangeManagerFactory.java  PrismExchangePayloadSchema.java  PrismExchangePlugin.java  PrismExchangeSink.java  PrismExchangeSinkHandle.java  PrismExchangeSinkInstanceHandle.java  PrismExchangeSource.java  PrismExchangeSourceHandle.java  PrismFlightClientPool.java  PrismFlightTlsOptions.java  PrismPartitionRouter.java
trino/prism-exchange/src/test/java/io/prism/exchange/: InMemoryShuffleFlightProducer.java  PrismExchangeConfigTest.java  PrismExchangeRoundTripTest.java  PrismPartitionRouterTest.java
trino/prism-exchange/src/test/resources/: logback-test.xml
