[workspace]
members = [
    "prism-executor",
    "prism-flight",
    "prism-substrait",
    "prism-osi",
    "prism-jni",
    "prism-bench",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/prism-query/prism"

[workspace.dependencies]
# Arrow ecosystem
arrow = { version = "55", features = ["ffi"] }
arrow-array = "55"
arrow-buffer = "55"
arrow-cast = "55"
arrow-data = "55"
arrow-flight = { version = "55", features = ["flight-sql-experimental"] }
arrow-ipc = "55"
arrow-ord = "55"
arrow-schema = "55"
arrow-select = "55"
arrow-string = "55"

# Parquet columnar storage
parquet = { version = "55", default-features = false, features = ["arrow", "snap"] }

# DataFusion (for expression evaluation and utilities)
datafusion = "46"
datafusion-common = "46"
datafusion-expr = "46"
datafusion-physical-expr = "46"

# Substrait
substrait = "0.52"
prost = "0.13"
prost-types = "0.13"

# Arrow Flight / gRPC (must match arrow-flight's tonic version)
tonic = "0.12"
tonic-build = "0.12"

# JNI
jni = "0.21"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Parallel execution
rayon = "1.10"

# Testing
criterion = "0.5"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"
