[workspace]
members = [
    "prism-executor",
    "prism-flight",
    "prism-substrait",
    "prism-osi",
    "prism-jni",
    "prism-bench",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/prism-query/prism"

[workspace.dependencies]
# Arrow ecosystem
arrow = { version = "57", features = ["ffi"] }
arrow-array = "57"
arrow-buffer = "57"
arrow-cast = "57"
arrow-data = "57"
arrow-flight = { version = "57", features = ["flight-sql-experimental"] }
arrow-ipc = "57"
arrow-ord = "57"
arrow-schema = "57"
arrow-select = "57"
arrow-string = "57"

# Parquet columnar storage. `object_store` enables async + ParquetObjectReader.
parquet = { version = "57", default-features = false, features = ["arrow", "snap", "object_store"] }

# Object storage abstraction (S3, GCS, Azure ADLS, local file system)
# Version pinned for compatibility with parquet 57's internal dependency.
object_store = { version = "0.12", features = ["aws", "gcp", "azure"] }
url = "2"
bytes = "1"

# DataFusion (for expression evaluation and utilities).
# DataFusion 51 is the first release that adopts arrow 57; 49/50 still pinned arrow 55/56.
datafusion = "51"
datafusion-common = "51"
datafusion-expr = "51"
datafusion-physical-expr = "51"

# Substrait: datafusion-substrait 51 pulls in substrait ^0.62; keep the protobuf
# version aligned so the IR types are identical across crates.
substrait = "0.62"
prost = "0.14"
prost-types = "0.14"

# Arrow Flight / gRPC (must match arrow-flight's tonic version).
#
# arrow-flight 57 depends on tonic ^0.14 and prost ^0.14, so the workspace
# moves with it. Tonic 0.14 replaced the `tls` feature with explicit
# `tls-ring` / `tls-aws-lc` variants; we stick with the ring backend to match
# the rustls feature set configured below. See `prism-flight/src/tls.rs`.
tonic = { version = "0.14", features = ["tls-ring"] }
tonic-build = "0.14"

# rustls + PEM parsing. Transitively these are already pulled in by
# `tonic`'s `tls` feature, but we pin them explicitly so the loader in
# `prism-flight/src/tls.rs` compiles even if a future tonic bump drops
# them from the public surface.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }

# JNI
jni = "0.21"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Parallel execution
rayon = "1.10"

# Testing
criterion = "0.5"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"
