[package]
name = "prism-bench"
description = "Distributed benchmark — Rust Flight workers for Prism"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "prism-worker"
path = "src/main.rs"

[dependencies]
prism-executor = { path = "../prism-executor" }
prism-flight = { path = "../prism-flight" }
prism-substrait = { path = "../prism-substrait" }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-flight = { workspace = true }
arrow-ipc = { workspace = true }
arrow-schema = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
parquet = { workspace = true }
libc = "0.2"
