[package]
name = "prism-executor"
description = "Arrow-native SIMD execution operators for Prism"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-cast = { workspace = true }
arrow-data = { workspace = true }
arrow-ord = { workspace = true }
arrow-schema = { workspace = true }
arrow-select = { workspace = true }
arrow-string = { workspace = true }
datafusion-common = { workspace = true }
datafusion-physical-expr = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parquet = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "operators"
harness = false

[[bench]]
name = "tpch"
harness = false

[[bench]]
name = "tpcds"
harness = false

[[bench]]
name = "scaling"
harness = false

[[bench]]
name = "string_workload"
harness = false

[[bench]]
name = "concurrent"
harness = false

[[bench]]
name = "substrait_roundtrip"
harness = false
