[package]
name = "prism-flight"
description = "Arrow Flight shuffle writer/reader for Prism inter-worker communication"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-flight = { workspace = true }
arrow-ipc = { workspace = true }
arrow-schema = { workspace = true }
prism-executor = { path = "../prism-executor" }
tonic = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# TLS: rustls / rustls-pemfile are used directly by `src/tls.rs` to
# validate and parse the PEM material before handing it to tonic's
# `ServerTlsConfig`. This keeps the parsing + diagnostics in our code
# (clear error messages, path-aware failures) while reusing tonic's
# acceptor for the wire protocol. Cipher suites are rustls defaults
# (TLS 1.3 preferred).
rustls = { workspace = true }
rustls-pemfile = { workspace = true }

[dev-dependencies]
arrow = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
criterion = { workspace = true }

[[bench]]
name = "shuffle"
harness = false
